--- a/first_web_page.html
+++ b/first_web_page.html
@@ -13,7 +13,7 @@
 	<header>
 	<h1>My "First" Web Page</h1>
 	</header>
-	<p>This is just a simple web page to help me learn html. It has some random stuff like quotes, dictionary and games. Hope you like it! :)</p>
+	<p>This is just a simple web page to help me learn html. Hope you like it! :)</p>
 
 	<hr>
 
